# fibonacci

./: .editorconfig  .gitignore  .pre-commit-config.yaml  pyproject.toml  tasks.py
fibonacci/: __init__.py  fibonacci.py
tests/: test_fibonacci.py
